  * DEFINE-SLOT-SETTER*: Weird idea removed.
  * DEFINE-GENSYM-GENERATOR -> DEF-GENSYM.
  * SIMPLE-OBJECT? -> JSON-OBJECT?.
  * LML2XML allows to print standalone attributes (with NIL
    values).  Assigned an empty string before.
  * CL: NANOTIME replaced by MILLISECONDS-SINCE-1970, albeit
    with precision of seconds only.
    "js" and "php".
  * CL: FIND-SYMBOL takes strings instead of symbols.
  * PHP: versions older than 7.0 are not supported anymore.
         In return, code size has been reduced by ~10% and
         overall performance has been greatly improved as
         well.
  * PHP: Does not deal with magic quotes anymore.
  * PHP: Faster array access.
  * PHP: Native arrays are recognized as hash tables if they
         are not sequential.
  * PHP: MAKE-HASH-TABLE is a regular function, not a macro.
  * JS: STRING? also checks if object is an instance of
        class "String".
  * JS/PHP: Code size reduction by ~30%.
  * JS/PHP: MILLISECONDS-SINCE-1970 moved here from modules
  * JS/PHP: DEFPACKAGE, IN-PACKAGE and EXPORT added.
  * JS/PHP: OREF added for object access.
  * JS/PHP: Slightly shorter generated identifiers for alien
            characters.
  * JS/PHP: MAKE-ARRAY is a regular function which does not
            take a list of initial elements but a list of
            dimensions.

Changes of tre-0.18 relative to tre-0.17:
  * Slightly improved optimizer.
  * NONE? renamed to NOTANY.
  * AADJOIN moved to outside project "phitamine".
  * Removed STRING-ARRAY.
  * Beautified compiler dumps.

Changes of tre-0.17 relative to tre-0.16:
  * COUNT now has :TEST argument.
  * COMPILE lists unused functions.
  * SUBSEQ: Doesn't claim error if sequence is NIL anymore.
  * ELT: Returns NIL if object is NIL.
  * Another thorough cleanup took place.

Changes of tre-0.16 relative to tre-0.15:
  * Transpiler cleaned up thoroughly.  Lots of stale code has
    been removed.
  * GENSYM now takes optional symbol name prefix.