@@ -12,6 +12,8 @@ Changes relative to tre-0.18:
   * CL: NANOTIME replaced by MILLISECONDS-SINCE-1970, albeit
     with precision of seconds only.
     "js" and "php".
+  * PRINT-HTML-SCRIPT: Old browsers not supported anymore.
+    Removed strict mode.
   * CL: FIND-SYMBOL takes strings instead of symbols.
   * PHP: versions older than 7.0 are not supported anymore.
          In return, code size has been reduced by ~10% and
